--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
     <h1>Titulo nuevo GIT modificado! </h1>
 
+    <form action="#">
+        <input type="button" value="Enviar">
+    </form>
+
 </body>
 
 </html>
