--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Titulo nuevo GIT modificado! </h1>
 
     <form action="#">
+        <input type="text" name="firstName" id="firstName">
         <input type="button" value="Enviar">
     </form>
 
