--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <form action="#">
         <input type="text" name="firstName" id="firstName">
+        <input type="text" name="lasttName" id="lastName">
         <input type="button" value="Enviar">
     </form>
 
