--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <form action="#">
         <input type="text" name="firstName" id="firstName">
         <input type="text" name="lasttName" id="lastName">
+        <input type="number" name="age" id="age">
         <input type="button" value="Enviar">
     </form>
 
