--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Titulo nuevo GIT modificado! </h1>
 
     <form action="#">
-        <input type="text" name="firstName" id="firstName">
+        <input type="texto" name="firstName" id="firstName">
         <input type="text" name="lasttName" id="lastName">
         <input type="number" name="age" id="age">
         <input type="button" value="Enviar">
